--- a/pages/profiles/profile_user.css
+++ b/pages/profiles/profile_user.css
@@ -4,19 +4,15 @@
     --second-color: #ffffff;
 }
 
-.alignment{
-    content: "";
-    height: 50px;
-}
-
 .wrapper{
+    width: 100%;
     display: flex;
     position: relative;
     background-color: rgb(245, 244, 244) ;
 }
 
 .profile_user{
-    width: 20%;
+    width: 15%;
     padding: 19px 15px 0px 37px;
     background: rgb(255, 255, 255);
 }
@@ -41,12 +37,12 @@
 }
 
 .main_user{
-    width: 80%;
+    width: 75%;
     background-color: rgb(255, 255, 255);
 }
 
-
 .setting_user form{
+    width: 100%;
     padding: 55px 20px 0px 50px;
     flex-direction: column;
     align-items: center;
@@ -59,7 +55,6 @@
     box-shadow: 2px 10px 20px #0003;
     box-sizing: border-box;
     text-wrap: nowrap;
-    width: 100%;
     background-color: var(--second-color);
 }
 
@@ -77,23 +72,29 @@ form td{
     color: black;
 }
 
-form input{
-    padding: 5px;
+.user_img img{
+    width: 40%;
+    border-radius: 50%;
+}
+
+.setting_profile input{
     width: 100%;
+}
+
+.body_user input{
+    padding: 8px;
     border-radius: 8px;
-    margin-top: 10px;
+    width: 80%;
     border: 2px solid #d9d9d9;
     font-size: 12px;
     box-sizing: border-box;
     transition: all .3s cubic-bezier(.645,.045,.355,1);
 }
 
-
-form select{
-    padding: 5px;
-    width: 100%;
+.body_user select{
+    padding: 8px;
+    width: 80%;
     border-radius: 8px;
-    margin-top: 10px;
     border: 2px solid #d9d9d9;
     font-size: 12px;
     box-sizing: border-box;
@@ -101,7 +102,9 @@ form select{
     transition: all .3s cubic-bezier(.645,.045,.355,1);
 }
 
-form textarea{
+.body_user textarea{
+    width: 80%;
+    height: 60px;
     margin-top: 15px;
     border: 1px solid lightgray;
     border-radius: 8px;
@@ -109,6 +112,8 @@ form textarea{
 
 button{
     width: 20%;
+    max-width: 120px;
+    font-size: 75%;
     height: 30px;
     border: none;
     border-radius: 7px;
